# ai-music-style-recognition

./: .gitignore  README.md
bastian/: neural.cpp
bastian/python/: Neural_Network.py
bastian/src/: model.tflite  neural.cpp
tflite/: makefile  neural_network.cpp  output  tools.cpp  tools.h
titouan/: CMakeLists.txt
titouan/include/: constants.h  decision_tree.h  tools.h
titouan/python/: decision_tree.py  display_mu_std.py  neural_network.py  random_forest.py  svm.py  visualize_fft.py
titouan/python/tmp/: myinlinetree
titouan/src/: CMakeCache.txt  Makefile  cmake_install.cmake  decision_tree.cpp  main.cpp  random_forest.cpp  tools.cpp
victor/: CMakeLists.txt  generate_audio.sh
victor/include/: constants.h  decision_tree.h  mean_std.h  random_forest.h  svm.h
victor/python/: decision_tree.py  random_forest.py  svm.py  tools.py
victor/python/tmp/: myinlinetree
victor/src/: decision_tree.cpp  extractor.cpp  random_forest.cpp  svm.cpp
